<resources>
    <string name="app_name">MyToDo</string>
    <string name="add_button">Add</string>
    <string name="action_settings">Settings</string>
    <string name="edit_item_label">Edit Item Below :</string>
    <string name="save_button">Save</string>
    <string name="edit_item_text">Edit Item</string>
    <string name="task_name">Task Name </string>
    <string name="due_date">Due Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_date">Pick Date</string>
    <string name="due_date_text">Enter Date</string>
    <string name="notes">Notes</string>
    <string name="priority">Priority</string>
    <string name="task_notes">Enter task notes</string>
    <string name="status">Status</string>

    <string-array name="priority_options">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string-array name="status">
        <item>ToDo</item>
        <item>Done</item>
    </string-array>

</resources>
