<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:paddingTop="@dimen/padding_top"
        android:paddingBottom="@dimen/padding_bottom"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/colorBackground"
        android:id="@+id/add_task_layout">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/taskNameTextView"
            android:layout_alignParentTop="true"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/taskNameEditText"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_margin="@dimen/margin_10"
            android:layout_toRightOf="@+id/taskNameTextView"
            android:layout_alignBaseline="@+id/taskNameTextView"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/taskNameTextView"
            android:id="@+id/hseperator"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:background="@android:color/darker_gray"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/dueDateTextView"
            android:layout_below="@+id/hseperator"
            android:layout_alignLeft="@+id/taskNameTextView" />


        <EditText
            android:id="@+id/due_date_edit_text"
            android:layout_width="fill_parent"
            android:editable="false"
            android:layout_height="wrap_content"
            android:hint="@string/due_date_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:onClick="showDatePickerDialog"
            android:layout_below="@+id/hseperator"
            android:layout_toRightOf="@+id/dueDateTextView"
            android:layout_alignBaseline="@+id/dueDateTextView"
            android:layout_alignLeft="@+id/taskNameEditText"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/dueDateTextView"
            android:id="@+id/hseperator2"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hseperator2"
            android:layout_alignParentLeft="true"
            android:text="@string/notes"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/taskNotesTextView"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/taskNotesEditText"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/hseperator2"
            android:layout_alignParentRight="true"
            android:layout_alignLeft="@+id/due_date_edit_text"
            android:layout_toRightOf="@+id/taskNotesTextView"
            android:layout_alignBaseline="@+id/taskNotesTextView"
            android:hint="@string/task_notes"
            android:inputType="textMultiLine"
            android:maxLines="2"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/taskNotesTextView"
            android:id="@+id/hseperator3"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hseperator3"
            android:text="@string/priority"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/priorityTextView"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prioritySpinner"
            android:layout_below="@+id/hseperator3"
            android:layout_alignLeft="@+id/taskNotesEditText"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@+id/priorityTextView"
            android:layout_toRightOf="@+id/priorityTextView"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/priorityTextView"
            android:id="@+id/hseperator4"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hseperator4"
            android:text="@string/status"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/statusTextView"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statusSpinner"
            android:layout_below="@+id/hseperator3"
            android:layout_alignLeft="@+id/taskNotesEditText"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@+id/statusTextView"
            android:layout_toRightOf="@+id/statusTextView"

            />




    </RelativeLayout>





