<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.swetashinde.mytodo.AddTaskActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/taskNameTextView"
        android:layout_alignParentTop="true"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskNameEditText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_margin="@dimen/margin_10"
        android:layout_toRightOf="@+id/taskNameTextView"
        android:layout_alignBaseline="@+id/taskNameTextView"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/taskNameTextView"
        android:id="@+id/hseperator"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@android:color/darker_gray"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dueDateTextView"
        android:layout_below="@+id/hseperator"
        android:layout_alignLeft="@+id/taskNameTextView" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:onClick="showDatePickerDialog"
        android:layout_below="@+id/hseperator"
        android:layout_toRightOf="@+id/dueDateTextView"
        android:layout_toEndOf="@+id/taskNameTextView"
        android:layout_alignBaseline="@+id/dueDateTextView"/>


</RelativeLayout>
